trioslib/include/trios_mtm.h

/*  Modification by:  Nina S. Tomita, R. Hirata Jr. (nina@ime.usp.br)       */
/*  Date: Tue Jan  6 1998                                                   */
/*  Mod: Added two new fields to the structure mtm_bx (Px and px)           */
/*  Mod: Added a new field to the structure mtm_t (comp_prob)               */

/*  Modification by:  Nina S. Tomita, R. Hirata Jr. (nina@ime.usp.br)       */
/*  Date: Wed Apr 29 1998                                                   */
/*  Mod: Added definitions for MAE and MSE                                  */ 

/*  Modification by:  Nina S. Tomita, R. Hirata Jr. (nina@ime.usp.br)       */
/*  Date: Tue Jul 27 1999                                                   */
/*  Mod: Changed the definitions for MAE and MSE to MODA_DISCRETE           */
/*  Mod: and AVERAGE_DISCRETE                                               */

/*  Modification by:  Nina S. Tomita, R. Hirata Jr. (nina@ime.usp.br)       */
/*  Date: Thu Jul 29 1999                                                   */
/*  Mod: The labels of all patterns have been changed to int                */

/*  Modification by:  Nina S. Tomita, R. Hirata Jr. (nina@ime.usp.br)       */
/*  Date: Thu Aug 19 1999                                                   */
/*  Mod: mtm_BX and mtm_GX structure changed. For mtm_BX, field PX and      */
/*       px were changed to fq and fq1, respectively. For mtm_GX, a new     */
/*       field fq was introduced. fq keeps the number of times a w-pattern  */
/*       has been observed during sampling. fq1 keeps how many times        */
/*       the label 1 was observed assigned to the w-pattern                 */

/*!
    Structure that holds a classified example for operators with binary input.
 */
typedef struct mtm_bx {
  unsigned int   *wpat ;    /*!< pointer to w-pattern                       */
  int            label ;    /*!< label attributed to the pattern            */
  unsigned int   fq ;       /*!< frequency of w-pattern                     */
  unsigned int   fq1 ;      /*!< frequency of w-pattern assigned to label 1 */
} mtm_BX ;
/*!
    Structure that holds the classified examples table.
  */
typedef struct {
  int    wsize ;       /*!< size of w-pattern                      */
  char   type ;        /*!< type of examples: BB, BG, GB or GG     */
  unsigned int nmtm ;  /*!< number of miniterms                    */
  unsigned int nsum ;  /*!< total number of examples (sum of fq's) */
  int    comp_prob ;   /*!< if 1, indicates that probabilities were computed */
  freq_node *mtm_freq; /*!< pointer to list of frequencies */
  int   *mtm_data ;    /*!< pointer to the table                   */
} mtm_t ;
/*
     -------------------------------------------
     FUNCTION: MTM CREATE
     -------------------------------------------
*/

mtm_t *          /*+ Purpose: allocate a MTM structure                     +*/
  mtm_create(
    int wsize,   /*+ In: w-pattern size                                    +*/
    int type,    /*+ In: transformation type (BB, BG, GB or GG)            +*/
    unsigned int nmtm  /*+ In: number of minterms                          +*/
)
/*+ Returns: a pointer to the MTM structure                                +*/ ;
/*
     -------------------------------------------
     FUNCTION: MTM FREE
     -------------------------------------------
*/
void                      /*+ Purpose: free memory area used MTM structure  +*/
  mtm_free(
    mtm_t *mtm            /*+ In: pointer to the MTM structure              +*/
)
/*+ Return: nothing                                                         +*/ ;