trioslib/include/trios_win.h

typedef struct {
  unsigned char width ;  /* window matrix width (1<=width<=256)  */
  unsigned char height ; /* window matrix height (1<=width<=256) */
  unsigned char nbands ; /* window matrix bands (1<=bands<=256)  */
  int  *wsize ;          /* window size                          */
  char *windata ;        /* window description array             */
} window_t ;
int             /*+ Purpose: set a value (0 or 1) on window matrix         +*/
  win_set_point(
    int i,          /*+ In: row number of the point to be set              +*/
    int j,          /*+ In: column number of the point to be set           +*/
    int k,          /*+ In: band of the point to be set                    +*/
    int value,      /*+ In: value to be set                                +*/
    window_t *win   /*+ In/Out: a pointer to a window                      +*/
    ) ;
int            /*+ Purpose: get the value of a point from window data     +*/
  win_get_point(
    int i,           /*+ In: Row number of the point                       +*/
    int j,           /*+ In: column number of the point                    +*/
    int k,           /*+ In: band of the point                             +*/
    window_t *win    /*+ In: a pointer to a window                         +*/
    ) ;
window_t *     /*+ Purpose: create  a window                               +*/
  win_create(
    int height,       /*+ In: height of the window                         +*/
    int width,        /*+ In: width of the window                          +*/
    int nbands        /*+ In: number of bands of the window                +*/   
    ) ;
void           /*+ Purpose: free the memory area of a window               +*/
  win_free(
    window_t *win                /*+ In: a pointer to a window             +*/
    ) ;