trioslib/include/trios_itv.h

/*!
    Structure that holds an interval of a binary W-operator.
*/
typedef struct itv_bx { /*!< Structure of the interval                      +*/
  unsigned int *A ;     /*!< left extremity of the interval                 +*/
  unsigned int *B ;     /*!< right extremity of the interval                +*/
  int label ;           /*!< value associated to the points of the interval +*/
  struct itv_bx *next ; /*!< pointer to the next interval                   +*/
} itv_BX ;
/*  Modification by:  Nina S. Tomita, R. Hirata Jr. (nina@ime.usp.br)       */
/*  Date: Tue Aug 17 1999                                                   */
/*  Mod: a new field _maxlabel_ was inserted into itv_t structure.          */
/*       To handle OCR training, using tree structure training method,      */
/*       labels for the classes in the intermediary nodes of the training   */
/*       tree are greater than 255 (because labels 0-255 are reserved for   */
/*       real characters). That makes neccessary that the images produced   */
/*       when the basis (operator) is applied be a SHORT image.             */
/*       In order to avoid that images produced be always a SHORT image, to */
/*       save disk space, we established a convention that, if maxlabel>255 */
/*       then image produced will be SHORT, otherwise it will be BYTE       */

/*!
    Structure that holds an image operator.
*/
typedef struct {
  int  wsize ;          /*!< w-pattern size +*/
  int  wzip ;           /*!< compacted w-pattern size +*/
  int  type ;           /*!< type (BB, BG, GB, GG) +*/
  int  nitv ;           /*!< number of intervals +*/
  int  maxlabel ;       /*!< maximum label assigned to the intervals in the set +*/
  int  deflabel ;       /*!< default value to be associated to the
                            points out of the intervals union +*/
  int  *head ;          /*!< pointer to the intervals list head +*/
} itv_t ;
/*+ Return: 1 on success, 0 on failure                                     +*/



int             /*+ Purpose: check if some interval of a list contains a
                             w-pattern, and returns the respective label   +*/
  itv_list_contain(                                                                
    itv_t  *itv,        /*+ In: the pointer to the list of intervals       +*/
    unsigned int *wpat, /*+ In: the w-pattern                              +*/
    int    wzip         /*+ In: compacted w-pattern's size                 +*/
) ;